--- a/single1.css
+++ b/single1.css
@@ -382,8 +382,8 @@ a.active, a:hover{
   }
 
   .page-logo {
-    width: 50px;
-    height: 50px;
+    width: 120px;
+    height: auto;
   }
 
   .row-container {
