--- a/single1.css
+++ b/single1.css
@@ -333,7 +333,8 @@ a.active, a:hover{
   transition: transform 0.8s;
   transform-style: preserve-3d;
 }
-.flip-card:hover .flip-card-inner {
+.flip-card:hover .flip-card-inner,
+.flip-card.flipped .flip-card-inner  {
   transform: rotateY(180deg);
 }
 .flip-card-front, .flip-card-back {
